# rsinit

./: AUTHORS  Cargo.toml  Makefile  README.md  REUSE.toml  cargo-minimal  rustfmt.toml
.github/workflows/: reuse.yaml  rust.yml  style.yml
examples/: nfs-bind-mounts.rs
src/: cmdline.rs  dmverity.rs  init.rs  integration.rs  kmsg.rs  lib.rs  main.rs  mount.rs  readahead.rs  systemd.rs  usbg_9pfs.rs  util.rs
src/bins/: readahead.rs
test/: conftest.py  features_combinations.py  genimage.py  qemu.py  test_basic.py
