[package]
name = "rsinit"
version = "0.1.0"
edition = "2021"
license = "GPL-2.0-only"

[[bin]]
name = "init"
path = "src/main.rs"

[dependencies]
nix = { version = "0.29", features = ["fs", "mount", "process", "term"], default-features = false }
getrandom = { version = "0.2.15" }

[features]
default = ["systemd", "dmverity", "usb9pfs", "reboot-on-failure"]
systemd = ["nix/reboot"]
dmverity = ["nix/ioctl"]
usb9pfs = []
reboot-on-failure = ["nix/reboot"]

[profile.release]
opt-level = 'z'
strip = true
lto = "fat"
incremental = false
codegen-units = 1

[profile.minimal]
inherits = "release"
panic = "abort"
